# color-pallete

./: .gitignore  main.py  pyproject.toml
