[tool.poetry]
name = "color-pallete"
version = "0.1.0"
description = ""
authors = ["Alen Vlahovljak <alen.vlahovljak@evolt.dev>"]
readme = "README.md"
packages = [{include = "color_pallete"}]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
extcolors = "^1.0.0"
colormap = "^1.0.4"
easydev = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
